--- a/frontend/booking-admin/src/app/pages/main-page/main-page.component.sass
+++ b/frontend/booking-admin/src/app/pages/main-page/main-page.component.sass
@@ -31,20 +31,21 @@
   color: #0964b0
 
 .file-predict::after
-  content: "Обновить предсказания"
+  content: "Загрузить данные для получения предсказаний"
 
 .file-train::after
   content: "Загрузить данные"
 
 .file-train-new::after
-  content: "Загрузить новые данные"
+  content: "Загрузить новые тренировочные данные"
 
 
 .upload
   display: block
   border-radius: 4px
   padding: 0 16px
-  height: 60px
+  height: 80px
+  width: 160px
   cursor: pointer
   background-color: white
   border: 1px solid rgba(0, 0, 0, 0.16)
@@ -55,7 +56,7 @@
 
 .file-train
   height: 40px
-  width: 180px
+  width: 165px
 
 .upload:hover
   background-color: #f3f4f6
@@ -83,3 +84,17 @@
   font-size: 30px
   text-align: center
   margin-bottom: 20px
+
+.start-cont-ques
+  display: flex
+  flex-gap: 10px
+
+.img-cont
+  display: flex
+
+.selects
+  display: flex
+  column-gap: 5px
+
+td
+  padding-top: 10px
