--- a/frontend/booking-admin/src/app/components/loading-dialog/loading-dialog.component.html
+++ b/frontend/booking-admin/src/app/components/loading-dialog/loading-dialog.component.html
@@ -5,8 +5,8 @@
       <div class="inside">
         <div class="loader"></div>
         <div style="display: flex; flex-direction: column; padding-left: 25px;">
-          <div class="text">загрузка</div>
-          <div class="text">данных</div>
+          <div class="text">Пожалуйста,</div>
+          <div class="text">подождите</div>
         </div>
       </div>
     </div>
