--- a/frontend/booking-admin/src/app/pages/main-page/main-page.component.html
+++ b/frontend/booking-admin/src/app/pages/main-page/main-page.component.html
@@ -1,163 +1,151 @@
 <app-top-bar></app-top-bar>
 
-
 <div class="new-cont" *ngIf="onlyLoadForModel">
   <div class="text-start">
-    Для начала работы загрузите информацию о бронированиях с известной информацией об отменах
+    Для начала работы загрузите информацию о бронированиях с известной
+    информацией об отменах
   </div>
 
-
-  <div>
-    <label for="fileUpload" class="upload file-train"></label>
-    <input
-      hidden
-      title=" "
-      type="file"
-      id="fileUpload"
-      accept="text/csv"
-      multiple
-      #fileInput
-      (change)="onFileSelected($event)"
-    >
-  </div>
-  <div>
-    <img
-      style="width: 30px; cursor: pointer"
-      src="/assets/question.svg"
-      (click)="openHint()"
-    >
+  <div class="start-cont-ques">
+    <div>
+      <label for="fileUpload" class="upload file-train"></label>
+      <input
+        hidden
+        title=" "
+        type="file"
+        id="fileUpload"
+        accept="text/csv"
+        multiple
+        #fileInput
+        (change)="onFileSelected($event, true)"
+      />
+    </div>
+    <div class="img-cont">
+      <img
+        style="width: 30px; cursor: pointer; height: 30px; align-self: center"
+        src="/assets/question.svg"
+        (click)="openHint()"
+      />
+    </div>
   </div>
 </div>
 
-
-
-<div class="cont-base" *ngIf="onlyLoadForModel !== undefined && !onlyLoadForModel">
+<div
+  class="cont-base"
+  *ngIf="onlyLoadForModel !== undefined && !onlyLoadForModel"
+>
   <div class="buttons">
-  <div>
-    <label for="fileUpload2" class="upload file-train-new"></label>
+    <div>
+      <label for="fileUpload2" class="upload file-train-new"></label>
+      <input
+        hidden
+        title=" "
+        type="file"
+        id="fileUpload2"
+        accept="text/csv"
+        multiple
+        #fileInput
+        (change)="onFileSelected($event)"
+      />
+    </div>
+
+    <label for="filePrediction" class="upload file-predict"></label>
     <input
       hidden
       title=" "
       type="file"
-      id="fileUpload2"
+      id="filePrediction"
       accept="text/csv"
       multiple
       #fileInput
-      (change)="onFileSelected($event)"
+      (change)="onGetPredictions($event)"
+    />
+  </div>
+
+  <div class="selects" *ngIf="isDataReady">
+    <mat-form-field *ngIf="yearControl">
+      <mat-select [formControl]="yearControl">
+        <mat-option *ngFor="let year of years" [value]="year">{{year}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field *ngIf="monthControl">
+      <mat-select [formControl]="monthControl">
+        <mat-option
+          *ngFor="let it of [].constructor(12); let i = index"
+          [value]="i"
+          >{{ getMonth(i) }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field *ngIf="dayControl">
+      <mat-select [formControl]="dayControl">
+        <mat-option
+          *ngFor="let it of [].constructor(31); let i = index"
+          [value]="i"
+          >{{ i + 1 }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div class="table-container">
+    <table
+      mat-table
+      *ngIf="tableData && isDataReady"
+      [dataSource]="tableData"
+      class="mat-elevation-z8"
     >
+      <ng-container matColumnDef="BookingId">
+        <th mat-header-cell *matHeaderCellDef>Id бронирования</th>
+        <td mat-cell *matCellDef="let element">{{ element.BookingId }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="ArrivalDateYear">
+        <th mat-header-cell *matHeaderCellDef>Год заселения</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.ArrivalDateYear }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ArrivalDateMonth">
+        <th mat-header-cell *matHeaderCellDef>Месяц заселения</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.ArrivalDateMonth }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ArrivalDateDayOfMonth">
+        <th mat-header-cell *matHeaderCellDef>День заселения</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.ArrivalDateDayOfMonth }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="AddInfo">
+        <th mat-header-cell *matHeaderCellDef>Дополнительная информация</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.AddInfo }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="CancellationPredict">
+        <th mat-header-cell *matHeaderCellDef>Вероятность отмены</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.CancellationPredict }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </div>
-
-  <label for="filePrediction" class="upload file-predict"></label>
-  <input
-    hidden
-    title=" "
-    type="file"
-    id="filePrediction"
-    accept="text/csv"
-    multiple
-    #fileInput
-    (change)="onGetPredictions($event)"
-  >
-  </div>
-
-  <div class="selects">
-
-  </div>
-<mat-form-field *ngIf="yearControl">
-  <mat-label>Select an option</mat-label>
-  <mat-select [formControl]="yearControl">
-    <mat-option value="2023">2023</mat-option>
-    <mat-option value="2024">2024</mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field *ngIf="monthControl">
-
-  <mat-select [formControl]="monthControl">
-    <mat-option *ngFor="let it of [].constructor(12); let i = index" [value]="i">{{getMonth(i)}}</mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field *ngIf="dayControl">
-
-  <mat-select [formControl]="dayControl">
-    <mat-option *ngFor="let it of [].constructor(31); let i = index" [value]="i">{{i + 1}}</mat-option>
-  </mat-select>
-</mat-form-field>
-
-<div class="table-container">
-  <table mat-table *ngIf="tableData" [dataSource]="tableData" class="mat-elevation-z8">
-
-    <ng-container matColumnDef="BookingId">
-      <th mat-header-cell *matHeaderCellDef> BookingId </th>
-      <td mat-cell *matCellDef="let element"> {{element.BookingId}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="CancellationPredict">
-      <th mat-header-cell *matHeaderCellDef> CancellationPredict </th>
-      <td mat-cell *matCellDef="let element"> {{element.CancellationPredict}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="ArrivalDateYear">
-      <th mat-header-cell *matHeaderCellDef> ArrivalDateYear </th>
-      <td mat-cell *matCellDef="let element"> {{element.ArrivalDateYear}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="ArrivalDateMonth">
-      <th mat-header-cell *matHeaderCellDef> ArrivalDateMonth </th>
-      <td mat-cell *matCellDef="let element"> {{element.ArrivalDateMonth}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="ArrivalDateDayOfMonth">
-      <th mat-header-cell *matHeaderCellDef> ArrivalDateDayOfMonth </th>
-      <td mat-cell *matCellDef="let element"> {{element.ArrivalDateDayOfMonth}} </td>
-    </ng-container>
-
-    <!-- <ng-container matColumnDef="StaysInWeekendNights">
-      <th mat-header-cell *matHeaderCellDef> StaysInWeekendNights </th>
-      <td mat-cell *matCellDef="let element"> {{element.StaysInWeekendNights}} </td>
-    </ng-container> -->
-<!--
-    <ng-container matColumnDef="StaysInWeekNights">
-      <th mat-header-cell *matHeaderCellDef> StaysInWeekNights </th>
-      <td mat-cell *matCellDef="let element"> {{element.StaysInWeekNights}} </td>
-    </ng-container> -->
-
-    <!-- <ng-container matColumnDef="Adults">
-      <th mat-header-cell *matHeaderCellDef> Adults </th>
-      <td mat-cell *matCellDef="let element"> {{element.Adults}} </td>
-    </ng-container> -->
-<!--
-    <ng-container matColumnDef="Children">
-      <th mat-header-cell *matHeaderCellDef> Children </th>
-      <td mat-cell *matCellDef="let element"> {{element.Children}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Babies">
-      <th mat-header-cell *matHeaderCellDef> Babies </th>
-      <td mat-cell *matCellDef="let element"> {{element.Babies}} </td>
-    </ng-container> -->
-
-    <!-- <ng-container matColumnDef="Meal">
-      <th mat-header-cell *matHeaderCellDef> Meal </th>
-      <td mat-cell *matCellDef="let element"> {{element.Meal}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="RequiredCarParkingSpaces">
-      <th mat-header-cell *matHeaderCellDef> RequiredCarParkingSpaces </th>
-      <td mat-cell *matCellDef="let element"> {{element.RequiredCarParkingSpaces}} </td>
-    </ng-container> -->
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
-<div *ngIf="statistics">
-  <div echarts [options]="DCoptions" [merge]="DCmergeOption" class="echart"></div>
-
-  <div echarts [options]="ProfitOptions" [merge]="ProfitMergeOption" class="echart"></div>
-
-</div>
 
 </div>
 <app-loading-dialog *ngIf="isLoading"></app-loading-dialog>
-<app-format-hint (close)="hint=false" *ngIf="hint"></app-format-hint>
-{{bookings?.length}}
+<app-error *ngIf="isError" (close)="isError=false"></app-error>
+<app-format-hint
+  (close)="hint = false"
+  *ngIf="hint"
+  [isCanceled]="true"
+  [isAdd]="false"
+></app-format-hint>
