--- a/frontend/booking-admin/src/app/pages/main-page/main-page.component.html
+++ b/frontend/booking-admin/src/app/pages/main-page/main-page.component.html
@@ -35,6 +35,7 @@
   *ngIf="onlyLoadForModel !== undefined && !onlyLoadForModel"
 >
   <div class="buttons">
+    <div style="padding:15px; margin-right: auto;"> API ключ: {{apiKey }}</div>
     <div>
       <label for="fileUpload2" class="upload file-train-new"></label>
       <input
